syntax = "proto3";

option java_multiple_files = true;

package com.role.grpc;

message Role{
    int32 role_id=4;

    string role_name=1;

}

message RoleRequest{
    int32 manager_id=10;

    repeated int32 id=7;

    int32 role_id=4;

    string role_name=1;

    repeated Role role=5;
}

message RoleResponse{
    int32 manager_id=10;

    repeated int32 id=7;

    int32 role_id=4;

    string role_name=1;

    repeated Role role=5;

    int32 status_id=6;

}

service RoleService{
    rpc listRole(RoleRequest) returns (RoleResponse);
    rpc addRole(RoleRequest) returns (RoleResponse);
    rpc removeRole(RoleRequest) returns (RoleResponse);
    rpc modifyRole(RoleRequest) returns (RoleResponse);
    rpc changePower(RoleRequest) returns (RoleResponse);
    rpc getRole(RoleRequest) returns (RoleResponse);
}